force-app/main/default/objects/Mortgage_Product__c/Mortgage_Product__c.object-meta.xml
<CustomObject>
    <label>Mortgage Product</label>
    <nameField>
        <displayFormat>MP-{0000000}</displayFormat>
        <label>Mortgage Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>