force-app/main/default/objects/Mortgage_Product__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortgage Products</relationshipLabel>
    <relationshipName>Mortgage_Products</relationshipName>
    <type>Lookup</type>
</CustomField>