force-app/main/default/objects/Mortgage_Product__c/fields/Disclosure_Text__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Text__c</fullName>
    <label>Disclosure Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>