force-app/main/default/objects/Mortgage_Product__c/fields/Follow_On_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Follow_On_Monthly_Payment__c</fullName>
    <label>Follow On Monthly Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>