force-app/main/default/objects/Mortgage_Product__c/fields/Initial_Interest_Period__c.field-meta.xml
<CustomField>
    <fullName>Initial_Interest_Period__c</fullName>
    <label>Initial Interest Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>