force-app/main/default/objects/Mortgage_Product__c/fields/Initial_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Initial_Monthly_Cost__c</fullName>
    <label>Initial Monthly Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>