force-app/main/default/objects/Mortgage_Product__c/fields/Initial_Rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rate__c</fullName>
    <label>Initial Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>