force-app/main/default/objects/Mortgage_Product__c/fields/Lender_Image_Large__c.field-meta.xml
<CustomField>
    <fullName>Lender_Image_Large__c</fullName>
    <label>Lender Image Large</label>
    <type>Url</type>
</CustomField>