force-app/main/default/objects/Mortgage_Product__c/fields/Lender_Image_Small__c.field-meta.xml
<CustomField>
    <fullName>Lender_Image_Small__c</fullName>
    <label>Lender Image Small</label>
    <type>Url</type>
</CustomField>