force-app/main/default/objects/Mortgage_Product__c/fields/Loan_Required__c.field-meta.xml
<CustomField>
    <fullName>Loan_Required__c</fullName>
    <label>Loan Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>