force-app/main/default/objects/Mortgage_Product__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>Mortgage Products</relationshipLabel>
    <relationshipName>Mortgage_Products</relationshipName>
    <type>Lookup</type>
</CustomField>