force-app/main/default/objects/Mortgage_Product__c/fields/MW_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>MW_Product_ID__c</fullName>
    <label>MW Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>