force-app/main/default/objects/Mortgage_Product__c/fields/Product_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Fee_Amount__c</fullName>
    <label>Product Fee Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>