force-app/main/default/objects/Mortgage_Product__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>