force-app/main/default/objects/Mortgage_Product__c/fields/Revision_Rate__c.field-meta.xml
<CustomField>
    <fullName>Revision_Rate__c</fullName>
    <label>Revision Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>