force-app/main/default/objects/Mortgage_Product__c/fields/Selected_Product__c.field-meta.xml
<CustomField>
    <fullName>Selected_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Product</label>
    <type>Checkbox</type>
</CustomField>